--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 nav {
-    border: 1px solid;
+    
     display: flex;
     justify-content: space-between;
     padding: 12px;
@@ -7,7 +7,7 @@ nav {
 }
 
 .logo-icon {
-    border: 1px solid;
+    
     background-image: url(https://picsum.photos/200);
     height: 25px;
     width: 50px;
@@ -19,6 +19,61 @@ nav {
 }
 
 .nav-item {
-    border: 1px solid;
+    
     padding: 8px;
+}
+
+.main-title {
+    text-align: center;
+}
+
+.main-content {
+    display: flex;
+}
+
+.main-content-item {
+
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-content-banner {
+    
+    width: 100%;
+    height: 150px;
+    background-image: url(https://picsum.photos/150);
+}
+
+.item-icon {
+    height: 25px;
+    width: 25px;
+    
+    background-image: url(https://picsum.photos/25);
+    border-radius: 50%;
+}
+
+.main-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+input {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    width: 75%;
+    height: 32px;
+    background-color: grey;
+    border: none;
 }
