--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav {
 
 .logo-icon {
     border: 1px solid;
-    background-image: url(https://picsum.photos/200);
+    background-image: assets\gambar1.jpg;
     height: 25px;
     width: 50px;
     background-size: cover;
@@ -21,4 +21,25 @@ nav {
 .nav-item {
     border: 1px solid;
     padding: 8px;
+}
+
+.main-title {
+    text-align: center;
+}
+
+.main-content {
+    display: flex;
+}
+
+.main-content-item {
+    border: 1px solid;
+    width: 100%;
+    height: 250px;
+}
+
+.main-content-banner {
+    border: 1px solid;
+    width: 100%;
+    height: 150px;
+    background-image: assets\gambar1.jpg;
 }
